Fix spacing in right panel

--- a/res/css/views/right_panel/_BaseCard.pcss
+++ b/res/css/views/right_panel/_BaseCard.pcss
@@ -1,5 +1,5 @@
 /*
-Copyright 2020 The Matrix.org Foundation C.I.C.
+Copyright 2020 - 2023 The Matrix.org Foundation C.I.C.
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -178,7 +178,7 @@ limitations under the License.
                 color: $quaternary-content;
             }
 
-            color: $tertiary-content;
+            color: $primary-content;
 
             .mx_BaseCard_Button_sublabel {
                 margin-left: auto;
