--- a/res/css/views/right_panel/_UserInfo.pcss
+++ b/res/css/views/right_panel/_UserInfo.pcss
@@ -132,7 +132,8 @@ limitations under the License.
         }
 
         .mx_UserInfo_profileStatus {
-            margin-top: $spacing-12;
+            margin-top: $spacing-8;
+            margin-bottom: $spacing-16;
         }
     }
 
@@ -219,7 +220,6 @@ limitations under the License.
     }
 
     .mx_UserInfo_devices {
-
         .mx_UserInfo_expand {
             column-gap: 5px; /* cf: mx_UserInfo_device_name */
             margin-bottom: 11px;
